<resources>
    <string name="app_name">Bank</string>
    <string name="authenticate_with_biometric">AUTHENTICATE WITH BIOMETRIC</string>
    <string name="use_login_pin_or_biometric">Use <u><b>PIN-code</b></u> or biometric</string>
    <string name="unlock_forget_login_pin">Unlock/Forget login PIN?</string>
    <string name="_1234">1234</string>
    <string name="hi_users">Hi Users,</string>
    <string name="en_hi">En/Hi</string>
    <string name="quick_review_n_balance">Quick review \n balance</string>
    <string name="more">More</string>
    <string name="scan_qr">Scan QR</string>
    <string name="x_xx_xxx">₹ X,XX,XXX</string>
    <string name="available_balance">Available balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_all_accounts">View all accounts</string>
    <string name="what_s_trending">What\'s trending</string>
    <string name="my_bob">My bob</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="bob_nworld">bob \nWorld</string>
    <string name="choose_color">Choose Color</string>
    <string name="red">red</string>
    <string name="black">black</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="enter_phoneno">Enter PhoneNo</string>
    <string name="login_with_phone">Login With Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set">Setting</string>
    <string name="cards">Cards</string>
    <string name="upi">UPI</string>
    <string name="home">Home</string>
    <string name="mo">More</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="to_confirm">To Confirm mobile Number ,we need to send an SMS from your phone.\n</string>
    <string name="fetch_your_card">Fetch your card deatils by clicking on view cards</string>
    <string name="view_card">View Cards</string>
    <string name="quick_actions">Quick Actions</string>
</resources>