<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/redColor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="#C6130D"
            android:textColor="#00000000"
            android:gravity="center"
            android:text="@string/blue"/>
        <TextView
            android:id="@+id/blackColor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="#000"
            android:textColor="#00000000"
            android:gravity="center"
            android:text="@string/black"/>
        <TextView
            android:id="@+id/blueColor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="#0A1450"
            android:textColor="#00000000"
            android:gravity="center"
            android:text="@string/red"/>
    </LinearLayout>

</LinearLayout>