<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appWindowBackground"
    tools:context=".DashBoardActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/appWindowBackground"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:padding="10dp"
            android:src="@drawable/bob1" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:elevation="5dp"
            app:cardCornerRadius="22dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleType="centerCrop"
                android:src="@drawable/pro" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/seach"
            app:tint="?attr/msgText" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:layout_marginTop="70dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/card_bg"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:cardCornerRadius="30dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="8dp"
                        android:text="@string/available_balance"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="8dp"
                        android:text="@string/x_xx_xxx"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/tc_bg"
                        android:padding="8dp"
                        android:text="@string/view_all_accounts"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/tc_bg"
                        android:padding="8dp"
                        android:text="@string/transaction_history"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reward_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/what_s_trending"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trend_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/my_bob"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bob_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="30dp"
            android:background="@drawable/card_bg"
            android:backgroundTint="?attr/msgText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="10dp"
            android:padding="15dp"
            android:src="@drawable/setting"
            app:tint="?attr/buttonBackground" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        android:background="?attr/appWindowBackground"
        android:padding="10dp"
        android:elevation="8dp"
        app:itemTextColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottom_navigation"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="?attr/msgText"
        >
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>