<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@drawable/bg_tool"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:src="@drawable/bob1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:src="@drawable/bob_logo1"/>

    </androidx.appcompat.widget.Toolbar>

   <LinearLayout
       android:id="@+id/layout_one"
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:background="@drawable/log_bg"
       android:elevation="8dp"
       app:layout_constraintTop_toBottomOf="@id/toolbar"
       android:layout_height="250dp">

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/banner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

   </LinearLayout>


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_one"
        android:text="@string/use_login_pin_or_biometric"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"/>

    <LinearLayout
        android:id="@+id/layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/text">

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/_1234"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:paddingBottom="8dp"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:elevation="5dp"
            android:background="@drawable/sw_bg"/>

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="3dp"
            android:elevation="10dp"

            >

            <ImageView
                android:id="@+id/authenticate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/biometric"
                android:scaleType="centerCrop" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <TextView
        android:id="@+id/fg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_two"
        android:text="@string/unlock_forget_login_pin"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"/>


</androidx.constraintlayout.widget.ConstraintLayout>